--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title:
 email:
 description: > # this means to ignore newlines until "baseurl:"
 
-baseurl: "/objectively-jekyll-boilerplate" # the subpath of your site, e.g. /blog
-url: "https://objectively.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
 seo_image_path: #'/images/media/filename.jpg'
@@ -44,3 +44,14 @@ source: ./source
 plugins_dir:
   - jekyll-seo-tag
   - jekyll-sitemap
+
+contentful:
+  spaces:
+    - indexPage: # Jekyll _data folder identifier - Required
+        space: ENV_RFA_CONTENTFUL_SPACE_ID         # Required
+        access_token: ENV_RFA_CONTENTFUL_DELIVERY_TOKEN
+        base_path: ./source         # Optional - Defaults to Current directory
+        destination: /contentful # Optional - Defaults to _data/contentful/spaces
+        all_entries: true
+        cda_query:
+          content_type: indexPage
