Add page gen plugin

--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,6 @@ timezone: America/New_York
 source: ./source
 # sass_dir: source/css
 
-plugins_dir:
-  - jekyll-seo-tag
-  - jekyll-sitemap
 
 contentful:
   spaces:
@@ -59,7 +56,15 @@ contentful:
         space: ENV_RFA_CONTENTFUL_SPACE_ID         # Required
         access_token: ENV_RFA_CONTENTFUL_DELIVERY_TOKEN
         base_path: ./source         # Optional - Defaults to Current directory
-        destination: /contentful # Optional - Defaults to _data/contentful/spaces
+        # destination: /contentful # Optional - Defaults to _data/contentful/spaces
         all_entries: true
         cda_query:
           content_type: criteria
+
+page_gen:
+  - data: contentful.criteria.criteria
+    template: criteria
+    name: title
+    dir: state-standard-of-excellence
+
+
