--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,14 @@ contentful:
         all_entries: true
         cda_query:
           content_type: criteria
+    - leadingPage: # Jekyll _data folder identifier - Required
+        space: ENV_RFA_CONTENTFUL_SPACE_ID         # Required
+        access_token: ENV_RFA_CONTENTFUL_DELIVERY_TOKEN
+        base_path: ./source         # Optional - Defaults to Current directory
+        destination: /contentful # Optional - Defaults to _data/contentful/spaces
+        all_entries: true
+        cda_query:
+          content_type: leadingPage
 
 page_gen:
   - data: contentful.criteria.criteria
