--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/rfa" # the subpath of your site, e.g. /blog
 url: "https://objectively.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 project_url: "/state-standard-of-excellence/"
-twitter_username:
+twitter_username: results4america
 github_username:
 seo_image_path: #'/images/media/filename.jpg'
 
