--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title:
 email:
 description: > # this means to ignore newlines until "baseurl:"
 
-baseurl: "/rfa" # the subpath of your site, e.g. /blog
-url: "https://objectively.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://2018state.results4america.org" # the base hostname & protocol for your site, e.g. http://example.com
 project_url: "/state-standard-of-excellence/"
 twitter_username: results4america
 github_username:
