--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-changed": "^3.2.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-gh-pages": "tekd/gulp-gh-pages",
     "gulp-htmlmin": "^4.0.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-import-css": "^0.1.3",
-    "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.0",
     "gulp-shell": "^0.6.5",
     "gulp-spawn-mocha": "^5.0.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
     "prettier": "^1.11.1",
@@ -43,6 +41,7 @@
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
-    "browser-sync": "^2.23.6"
+    "browser-sync": "^2.26.7",
+    "node-sass": "^4.12.0"
   }
 }
