--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
-    "lint": "eslint ./source/_js/**/*.js",
-    "test": "mocha $(find spec -name '*.js')",
-    "mocha-watch": "mocha -w --recursive $(find spec -name '*.js')"
+    "build:prod": "webpack -p --env production"
   },
   "author": "",
   "license": "ISC",
@@ -36,12 +33,12 @@
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
     "prettier": "^1.11.1",
-    "run-sequence": "^2.2.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
     "browser-sync": "^2.26.7",
+    "gulp-rename": "^1.4.0",
     "node-sass": "^4.12.0"
   }
 }
